ndo 




- AdvanceCOMP 1.19 - http://advancemame.sourceforge.net
- APNG Optimizer 1.2 - http://sourceforge.net/projects/apng/
- CSSTidy 1.3 - http://csstidy.sourceforge.net/download.php
- DeflOpt 2.07 - http://www.walbeehm.com/download/
- defluff 0.3.2 - http://j-o.users.sourceforge.net
- Document Press Version 6.01 - http://encode.ru/threads/336-Document-Press-6-01
- Flasm 1.62 - http://flasm.sourceforge.net
- Gifsicle 1.83 - http://www.lcdf.org/gifsicle/
- Ghostcript 9.14 - http://www.ghostscript.com
- GNU Strip 2.24 - http://www.gnu.org/software/binutils/
- ImageMagick 6.8.9.4 - http://www.imagemagick.org
- ImageWorsener 1.2.0 - http://entropymine.com/imageworsener
- jhead 2.97 - http://www.sentex.net/~mwandel/jhead/
- jpegoptim 1.4.2 beta - http://www.kokkonen.net/tjko/projects.html
- jpegtran 9 - http://jpegclub.org/jpegtran/
- jsmin 2013-03-29 - http://www.crockford.com/javascript/jsmin.html
- libwebp 0.4.0 - https://developers.google.com/speed/webp
- MP3packer 2.04 - http://omion.dyndns.org/mp3packer/mp3packer.html
- mozjpeg 1.01 - https://github.com/mozilla/mozjpeg
- OptiPNG Hg 20121021 - http://optipng.sourceforge.net
- PCXLite 1.0 - http://sol.gfxile.net/code.html
- PngOptimizer 2.4.1 - http://psydk.org/PngOptimizer
- PETrim 2.93 - http://pecompact.com/pesuite.php
- PNGOUT 02/20/2013 - http://advsys.net/ken/utils.htm
- pngrewrite 1.4.0 - http://entropymine.com/jason/pngrewrite
- pngwolf - http://bjoern.hoehrmann.de/pngwolf
- rehuff - http://wiki.xiph.org/Rehuff
- tidy-html5 c63cc39 - http://www.paehl.com/open_source/?HTML_Tidy_for_HTML5
- TruePNG 0.4.2.1 - http://x128.ho.ua/pngutils.html
- ZLib 1.2.8 - http://www.zlib.net
- zRecompress 2.12 - http://nikkhokkho.sourceforge.net/static.php?page=zRecompress


7.00 - YYYY
- Launch TruePNG before PNGOut to improve PNG compression (trlkly).
- Added OCX and VBX extensions to the DLL toolchain.
- Removed ImageMagick from the JPEG toolchain because it can cause quality loss (deluge).